--- a/views/admin/Dashboard.ejs
+++ b/views/admin/Dashboard.ejs
@@ -189,14 +189,14 @@
                                                     <div class="text">
 
                                                         <h6 class="mb-1 card-title">Revenue</h6>
-                                                        <span>Rs<%=(totalAmountSum).toFixed(2)%></span>
+                                                        <span>Rs.<%=(totalAmountSum).toFixed(2)%></span>
                                                         <!-- <span class="text-sm"> Shipping fees are not included </span> -->
 
                                                     </div>
                                                 </article>
                                             </div>
                                         </div>
-                                        <div class="col-lg-3">
+                                        <!-- <div class="col-lg-3">
                                             <div class="card card-body mb-4">
                                                 <article class="icontext">
                                                     <span class="icon icon-sm rounded-circle bg-success-light"><i
@@ -206,11 +206,11 @@
                                                         <span>
                                                             <%= totalOrders%>
                                                         </span>
-                                                        <!-- <span class="text-sm"> Excluding orders in transit </span> -->
+                                                        <span class="text-sm"> Excluding orders in transit </span>
                                                     </div>
                                                 </article>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <!-- <div class="col-lg-3">
                         <div class="card card-body mb-4">
                             <article class="icontext">
