--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -269,6 +269,7 @@
                                             <% } %>
                                     </select>
                                     <script>
+                                        let  categoryId;
                                         function redirectToCategory(select) {
                                             const categoryId = select.value;
 
@@ -321,13 +322,13 @@
 
                                 </div>
                                 <div class="single_product_menu d-flex">
-                                    <h5>show :</h5>
+                                    <!-- <h5>show :</h5> -->
                                     <div class="top_pageniation">
-                                        <ul>
+                                        <!-- <ul>
                                             <li>1</li>
                                             <li>2</li>
                                             <li>3</li>
-                                        </ul>
+                                        </ul> -->
                                     </div>
                                 </div>
                                 <div class="single_product_menu d-flex">
@@ -352,7 +353,7 @@
                     <script>
                         function search() {
                             const searchTerm = $('#searchInput').val().trim();
-
+                              
 
                             $.ajax({
                                 url: "/searchFilter", // Update the URL to your server-side search endpoint
