--- a/views/user/registration.ejs
+++ b/views/user/registration.ejs
@@ -9,7 +9,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>aranoz</title>
+        <title>sofazen</title>
         <link rel="icon" href="img/favicon.png">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -184,7 +184,7 @@
                                 <form class="row contact_form" action="#" method="post" novalidate="novalidate"
                                     onsubmit="return validateForm()">
                                     <input type="text" id="referalcode" name="referralCode" placeholder="Enter referralCode"
-                                   required />
+                                   required >
 
 
                                     <div class="col-md-12 form-group p_star">
