--- a/views/admin/Dashboard.ejs
+++ b/views/admin/Dashboard.ejs
@@ -142,8 +142,8 @@
                     </li> -->
                     <li class="dropdown nav-item">
                         <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount"
-                            aria-expanded="false"> <img class="img-xs rounded-circle"
-                           src="/imgs/people/avatar-4.png" alt="" class="avatar" /></a>
+                            aria-expanded="false"> <img class="img-xs rounded-circle" src="/imgs/people/avatar-4.png"
+                                alt="" class="avatar" /></a>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
                             <!-- <a class="dropdown-item" href="#"><i class="material-icons md-perm_identity"></i>Edit
                                 Profile</a>
@@ -349,22 +349,118 @@
                                                 id="2024" />
 
 
-                                                  
-                <input type="hidden" value="<%=  updatedYearlyTotalOrders[0].totalOrders %>" id="order2018" />
-                <input type="hidden" value="<%=  updatedYearlyTotalOrders[1].totalOrders %>" id="order2019" />
-                <input type="hidden" value="<%=  updatedYearlyTotalOrders[2].totalOrders %>" id="order2020" />
-                <input type="hidden" value="<%=  updatedYearlyTotalOrders[3].totalOrders %>" id="order2021" />
-                <input type="hidden" value="<%=  updatedYearlyTotalOrders[4].totalOrders %>" id="order2022" />
-                <input type="hidden" value="<%=  updatedYearlyTotalOrders[5].totalOrders %>" id="order2023" />
-                <input type="hidden" value="<%=  updatedYearlyTotalOrders[6].totalOrders %>" id="order2024" />
-                
-                <input type="hidden" value="<%=  updatedYearlyTotalUsers[0].totalUsers %>" id="users2018" />
-                <input type="hidden" value="<%=  updatedYearlyTotalUsers[1].totalUsers %>" id="users2019" />
-                <input type="hidden" value="<%=  updatedYearlyTotalUsers[2].totalUsers %>" id="users2020" />
-                <input type="hidden" value="<%=  updatedYearlyTotalUsers[3].totalUsers %>" id="users2021" />
-                <input type="hidden" value="<%=  updatedYearlyTotalUsers[4].totalUsers %>" id="users2022" />
-                <input type="hidden" value="<%=  updatedYearlyTotalUsers[5].totalUsers %>" id="users2023" />
-                <input type="hidden" value="<%=  updatedYearlyTotalUsers[6].totalUsers %>" id="users2024" />
+
+                                            <input type="hidden" value="<%=  updatedYearlyTotalOrders[0].totalOrders %>"
+                                                id="order2018" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalOrders[1].totalOrders %>"
+                                                id="order2019" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalOrders[2].totalOrders %>"
+                                                id="order2020" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalOrders[3].totalOrders %>"
+                                                id="order2021" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalOrders[4].totalOrders %>"
+                                                id="order2022" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalOrders[5].totalOrders %>"
+                                                id="order2023" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalOrders[6].totalOrders %>"
+                                                id="order2024" />
+
+                                            <input type="hidden" value="<%=  updatedYearlyTotalUsers[0].totalUsers %>"
+                                                id="users2018" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalUsers[1].totalUsers %>"
+                                                id="users2019" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalUsers[2].totalUsers %>"
+                                                id="users2020" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalUsers[3].totalUsers %>"
+                                                id="users2021" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalUsers[4].totalUsers %>"
+                                                id="users2022" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalUsers[5].totalUsers %>"
+                                                id="users2023" />
+                                            <input type="hidden" value="<%=  updatedYearlyTotalUsers[6].totalUsers %>"
+                                                id="users2024" />
+
+
+
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[0]. totalUsers %>"
+                                                id="Muser1" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[1].totalUsers %>"
+                                                id="Muser2" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[2].totalUsers %>"
+                                                id="Muser3" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[3].totalUsers %>"
+                                                id="Muser4" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[4].totalUsers %>"
+                                                id="Muser5" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[5].totalUsers %>"
+                                                id="Muser6" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[6].totalUsers %>"
+                                                id="Muser7" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[7].totalUsers %>"
+                                                id="Muser8" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[8].totalUsers %>"
+                                                id="Muser9" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[9].totalUsers %>"
+                                                id="Muser10" />
+                                            <input type="hidden" value="<%=EveryMonthlyTotalUsers[10].totalUsers %>"
+                                                id="Muser11" />
+                                            <input type="hidden" value="<%= EveryMonthlyTotalUsers[11].totalUsers %>"
+                                                id="Muser12" />
+
+
+                                            <input type="hidden" value="<%= updatedMonthlyValues[0].count %>"
+                                                id="Msales1" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[1].count %>"
+                                                id="Msales2" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[2].count %>"
+                                                id="Msales3" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[3].count %>"
+                                                id="Msales4" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[4].count %>"
+                                                id="Msales5" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[5].count %>"
+                                                id="Msales6" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[6].count %>"
+                                                id="Msales7" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[7].count %>"
+                                                id="Msales8" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[8].count %>"
+                                                id="Msales9" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[9].count %>"
+                                                id="Msales10" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[10].count %>"
+                                                id="Msales11" />
+                                            <input type="hidden" value="<%=  EveryMonthlySales[11].count %>"
+                                                id="Msales12" />
+
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[0].totalOrders %>" id="MOrder1" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[1].totalOrders %>" id="MOrder2" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[2].totalOrders %>" id="MOrder3" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[3].totalOrders %>" id="MOrder4" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[4].totalOrders %>" id="MOrder5" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[5].totalOrders %>" id="MOrder6" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[6].totalOrders %>" id="MOrder7" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[7].totalOrders %>" id="MOrder8" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[8].totalOrders %>" id="MOrder9" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[9].totalOrders %>" id="MOrder10" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[10].totalOrders %>" id="MOrder11" />
+                                            <input type="hidden" value="<%= 
+                EveryMonthlyOrders[11].totalOrders %>" id="MOrder12" />
+
+
+
+
                                             <div class="row">
                                                 <div class="col-lg-5">
                                                     <div class="card mb-4">
@@ -507,7 +603,9 @@
                                                                     <th class="align-middle" scope="col">Date</th>
                                                                     <th class="align-middle" scope="col">debit</th>
                                                                     <th class="align-middle" scope="col">Credit</th>
-                                                                    <th class="align-middle" scope="col">Total Balance=<%=(totalAmountSum).toFixed(2)%></th>
+                                                                    <th class="align-middle" scope="col">Total Balance=
+                                                                        <%=(totalAmountSum).toFixed(2)%>
+                                                                    </th>
 
                                                                 </tr>
                                                             </thead>
@@ -525,19 +623,24 @@
                                                                         <td>
                                                                             <%= id.transactions %>
                                                                         </td>
-                                                                        <td><%= new Date(id.date).toLocaleDateString() %></td>
+                                                                        <td>
+                                                                            <%= new Date(id.date).toLocaleDateString()
+                                                                                %>
+                                                                        </td>
 
-                                                                        <td style="color: red;" style="font-weight: 600;">
+                                                                        <td style="color: red;"
+                                                                            style="font-weight: 600;">
                                                                             - <%= id.debit%>
                                                                         </td>
                                                                         <td>
-                                                                            <span class="" style="color: greenyellow; font-weight: 600;">
+                                                                            <span class=""
+                                                                                style="color: greenyellow; font-weight: 600;">
                                                                                 + <%= id.credit %>
                                                                             </span>
-                                                                            
+
                                                                         </td>
-                                                                        <td><i
-                                                                                class=""style="color: black; font-weight: 1000;" >
+                                                                        <td><i class=""
+                                                                                style="color: black; font-weight: 1000;">
                                                                                 <%= id.balance%>
                                                                             </i>
                                                                         </td>
