--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -219,7 +219,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="section_tittle text-center">
-                        <h2>hadi<span>shop</span></h2>
+                        <h2>awesome<span>shop</span></h2>
                     </div>
                 </div>
             </div>
